<resources>
    <string name="app_name">DroneApp</string>
    <string name="tele_operation">Tele-Operation</string>
    <string name="waypoint">Waypoint</string>
    <string name="sensor_data">Sensor-Data</string>
    <string name="telemetry_data">Telemetry Data</string>
    <string name="waypoint1">Waypoint</string>
    <string name="text1">Text</string>
    <string name="sensordata">SensorData</string>
    <string name="button">Button</string>
    <string name="send">Send</string>
    <string name="enter_a_command">Enter a Command</string>
    <string name="title_activity_waypoint_maps">Map</string>
    <string name="text">Text</string>
    <string name="speech">Speech</string>
    <string name="buttons">Buttons</string>
    <string name="set_a_path_for_the_drone">Set a Path for the drone</string>
    <string name="camera_data">Camera Data</string>
    <string name="odometry_data">Odometry Data</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="save_video">Save Video</string>
    <string name="give_command_to_the_drone">Give Command to the Drone</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="title_activity_data_view">DataViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_data__view">Data_ViewActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="go_right">Go Right</string>
    <string name="go_left">Go Left</string>
    <string name="hover">Hover</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu1">Main Menu</string>
    <string name="start">Start</string>
    <string name="land">Land</string>
    <string name="speech_prompt">Say something to the drone.</string>
    <string name="speech_not_supported">This action is not supported.\\</string>
    <string name="takeoff">TakeOff</string>
    <string name="stop">stop</string>
    <string name="title_activity_signin">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="teleeoperation">TeleeOperation</string>
    <string name="data_streaming">Data Streaming</string>
    <string name="stop2">Stop</string>
    <string name="review">Review</string>
    <string name="start_streaming">start_streaming</string>
    <string name="stop_streaming">stop_streaming</string>
    <string name="review_streaming">review_streaming</string>
    <string name="success_text_message">Request to %s the %s is successful</string>
    <string name="failure_text_message">Request to %s the %s failed</string>
</resources>
